# advent_of_code

./: .gitignore  .pylintrc  LICENSE  README.md  dev-requirements.txt  setup.cfg
2022/01/: p1.py  p2.py
2022/02/: p1.py  p2.py
2022/03/: p1.py  p2.py
2022/04/: p1.py  p2.py
2022/05/: p1.py  p2.py
2022/06/: p1.py  p2.py
2022/07/: p1.py  p2.py
2022/08/: p1.py  p2.py
2022/09/: p1.py  p2.py
2022/10/: p1.py  p2.py
2022/11/: p1.py  p2.py
2022/12/: p1.py  p2.py
2022/13/: p1.py  p2.py
2022/14/: p1.py  p2.py
2022/15/: p1.py  p2.py
2022/16/: p1.py  p2.py
2022/18/: p1.py  p2.py  p2_faster.py
src/aoc/: aoc_solver_strategy.py
tests/: test_point.py
